--- a/eurekaserver/src/main/resources/bootstrap.yml
+++ b/eurekaserver/src/main/resources/bootstrap.yml
@@ -1,4 +1,4 @@
 spring:
   profiles.active: dev
   application.name: eureka
-  cloud.config.uri: http://localhost:24245
+  cloud.config.uri: ${CONFIG_URI:http://localhost:24245}
