--- a/configserver/src/main/resources/application.yml
+++ b/configserver/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   profiles:
     active: git 
   application:
-    name: config
+    name: config-server
   cloud.config.server.git:
     uri: https://github.com/kese1987/microservices-demo-config
     username: kese1987
