--- a/user_service/src/main/resources/bootstrap.yml
+++ b/user_service/src/main/resources/bootstrap.yml
@@ -1,4 +1,4 @@
 spring:
-  application.name: user_service
+  application.name: user-service
   profiles.active: dev
   cloud.config.uri: ${CONFIG_URI:http://localhost:24245}
